manifests/dev/forgejo/Ingress-forgejo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/version: 15.0.7
    helm.sh/chart: forgejo-17.1.5
    version: 15.0.7
  name: forgejo
  namespace: forgejo
spec:
  ingressClassName: traefik
  rules:
    - host: forgejo.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: forgejo-http
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - forgejo.home.kronkltd.net
      secretName: forgejo-tls
